--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "del": "^7.0.0",
+    "gulp": "^4.0.2",
+    "sass": "^1.56.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
