--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "devDependencies": {
     "del": "^6.1.1",
     "gulp": "^4.0.2",
-    "sass": "^1.56.2"
+    "gulp-clean-css": "^4.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.57.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
